@@ -25,7 +25,11 @@ except ImportError:
 
 if sys.version_info[0] == 3:
     from distutils.command.build_py import build_py_2to3
+    from lib2to3.refactor import get_fixers_from_package
     cmdclass['build_py'] = build_py_2to3
+    cmdclass['build_py'].fixer_names = sorted(
+        set(get_fixers_from_package("lib2to3.fixes")) -
+        set(["lib2to3.fixes.fix_future"]))
 
 # The apt_pkg module.
 files = ['apt_pkgmodule.cc', 'acquire.cc', 'cache.cc', 'cdrom.cc',
